@@ -10,3 +10,4 @@
 2017-09-13: Add ticket history , extend update and create ticket endpoint inorder to access assignee
 2017-10-19: Add serial UTC DateTime as return values, create comment support createdAt
 2017-10-19: Create comment accepts optional created at timestamp
+2017-11-08: Add firmware property to devices except stringboxes
